# ts_pmd

./: .gitignore  .pre-commit-config.yaml  Jenkinsfile  Jenkinsfile.conda  SConstruct  pyproject.toml  setup.cfg  towncrier.toml
.devcontainer/docker/: devcontainer.json
.devcontainer/podman/: devcontainer.json
conda/: meta.yaml
doc/: conf.py  index.rst  version-history.rst
doc/configuration/: configuration.rst
doc/developer-guide/: developer-guide.rst
doc/news/: DM-41589.bugfix.1.rst  DM-41589.bugfix.rst  DM-41589.doc.rst
doc/user-guide/: user-guide.rst
python/lsst/ts/pmd/: __init__.py  cli.py  component.py  config_schema.py  csc.py  enums.py  mock_server.py
tests/: test_csc.py  test_validation.py
tests/data/config/: _init.yaml  _labels.yaml  metadata_test.yaml
ups/: ts_pmd.table
