[build-system]
requires = ["setuptools>45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ts-pmd"
description = "PMD is a Commandable SAL Component for the `Vera C. Rubin Observatory <https://lsst.org>`_."
license = { text = "GPL" }
dependencies = ["pyserial"]
readme = "README.rst"
urls = { documentation = "https://ts-pmd.lsst.io", source_code = "https://github.com/lsst-ts/ts_pmd"}
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "setuptools_scm.get_version" }

[tool.setuptools.packages.find]
where = [ "python" ]

[project.scripts]
run_pmd = "lsst.ts.pmd.cli:execute_csc"
command_pmd = "lsst.ts.pmd.cli:command_csc"

[tool.setuptools_scm]
write_to = "python/lsst/ts/pmd/version.py"
write_to_template = """
__all__ = ["__version__"]
__version__ = "{version}"
"""

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = ["pytest", "pytest-flake8", "pytest-coverage", "asynctest", "black", "pytest-black"]
